--- a/app/src/main/res/layout-night/fragment_food_joke.xml
+++ b/app/src/main/res/layout-night/fragment_food_joke.xml
@@ -15,12 +15,12 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:background="@drawable/ic_food_joke_background_dark"
-        tools:context=".ui.fragmnet.foodjoke.FoodJokeFragment">
+        tools:context=".ui.fragment.foodjoke.FoodJokeFragment">
 
         <com.google.android.material.card.MaterialCardView
             android:id="@+id/food_joke_cardView"
             readApiResponse3="@{mainViewModel.foodJokeResponse}"
-            readDatabase3="@{mainViewModel.readFoodJokes}"
+            readDatabase3="@{mainViewModel.readFoodJoke}"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginHorizontal="24dp"
@@ -71,7 +71,7 @@
         <ImageView
             android:id="@+id/food_joke_error_imageView"
             readApiResponse4="@{mainViewModel.foodJokeResponse}"
-            readDatabase4="@{mainViewModel.readFoodJokes}"
+            readDatabase4="@{mainViewModel.readFoodJoke}"
             android:layout_width="100dp"
             android:layout_height="100dp"
             android:alpha="0.5"
@@ -87,7 +87,7 @@
         <TextView
             android:id="@+id/food_joke_error_textView"
             readApiResponse4="@{mainViewModel.foodJokeResponse}"
-            readDatabase4="@{mainViewModel.readFoodJokes}"
+            readDatabase4="@{mainViewModel.readFoodJoke}"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="8dp"
