--- a/app/src/main/res/layout/fragment_ingredients.xml
+++ b/app/src/main/res/layout/fragment_ingredients.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/backgroundColor"
-    tools:context=".ui.fragmnet.ingredients.IngredientsFragment">
+    tools:context=".ui.fragment.ingredients.IngredientsFragment">
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/ingredients_recyclerView"
